<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coinwallet</string>
    <string name="action_settings">Account</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username_hint">phone# or email</string>
    <string name="password_hint">At least 10 chars long</string>
    <string name="question_text">Secret Question:</string>
    <string name="answer_label">Secret Answer:</string>
    <string name="finish_register_button">Finish Registration</string>
    <string name="title_activity_lander">LanderActivity</string>

    <!-- Address resources -->
    <string name="addr_screen_name">Addresses</string>
    <string name="add_new_addr">Add New</string>
    <string name="archived_active_btn">Archived/Active</string>
    <string name="show_archived">Show archived</string>
    <string name="show_active">Show active</string>
    
    <!-- QR code resources -->
    <string name="qrcode_image_desc">QR code</string>
    <string name="qr_back_btn_text">&lt; Back</string>
    <string name="qr_placeholder_text">Loading…</string>
    <string name="qr_share_btn_text">Share</string>
	<string name="qr_share_subject_text">Sharing bitcoin Address </string>
    <string name="qr_share_body_text">Hi, I would like to share this BTC address with you: \n \n</string>
    
    <!-- Other -->
    <string name="new_question_label">New Security Question:</string>
    <string name="new_answer_label">New Security Answer:</string>
    <string name="change_qna_button_label">Change Question &amp; Answer</string>
    <string name="guid_header_label">GUID:</string>
    <string name="send_bitcoin">Send Bitcoins</string>
    <string name="receive_bitcoin">Receive Bitcoins</string>
    <string name="show_transactions">Show Transactions</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_send_bitcoins">Send Bitcoins</string>
	<string name="title_activity_receive_bitcoins">Receive Bitcoins</string>
	<string name="title_activity_show_transactions">Transactions</string>
	<string name="title_activity_show_statistics">Statistics</string>
	<string name="action_logout">Logout</string>
	<string name="currency_button">Default currency</string>
	<string name="currency_BTC_button">BTC</string>
	<string name="action_show_exchange_rates">Show exchange rates</string>
	<string name="show_statistics">Show statistics</string>
	<string name="title_activity_show_exchange_rates">Exchange Rates</string>
	<string name="exchange_from_amount">"Convert: "</string>
	<string name="exchange_btc">" BTC "</string>
	<string name="exchange_button_go">"Confirm"</string>
</resources>
