<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_send_bitcoins"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/send_bitcoin"/>
    <item
        android:id="@+id/action_show_transactions"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/show_transactions"/>
    <item
        android:id="@+id/action_show_exchange_rates"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_show_exchange_rates"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/action_logout" 
        android:orderInCategory="8" 
        android:showAsAction="never" 
        android:title="@string/action_logout"/>
</menu>
