<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/new_qna_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Please enter your password"
            android:inputType="textPassword">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_question_label" />

        <EditText
            android:id="@+id/new_question_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please enter a new secret question"
            android:ems="10" >

            
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_answer_label" />

        <EditText
            android:id="@+id/new_answer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please enter a new secret answer"
            android:ems="10" />

        <Button
            android:id="@+id/change_qna_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_qna_button_label" />

        <Spinner
            android:id="@+id/currency_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guid_header_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/settings_guid_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</RelativeLayout>
